backend-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-depl
  template:
    metadata:
      labels:
        app: backend-depl
    spec:
      containers:
        - name: backend-depl
          image: rafin1998/rafin-blog-site:0.6
          ports:
            - containerPort: 6000
